Niresh | Added locale for mnibn

--- a/locales/mnibn.json
+++ b/locales/mnibn.json
@@ -1,6 +1,121 @@
 {
-  "Language": "Manipuri BN",
-  "hrs recorded in": "%hours hrs recorded in %language",
-  "hrs validated in": "%hours hrs validated in %language",
-  "As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
+	"Language": "Manipuri BN",
+	"hrs recorded in": "%language দা পুং %hours রেকোর্দ তৌরে",
+	"hrs validated in": "%language দা পুং %hours ভেলিদেট তৌরে",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": "টিম অমা ওইনা, ঐখোয়না অদোম্বু ইনিসিএটিব অসিদা জোইন তৌবীনবা অমসুং অদোমগী ভোইসকী মিনট 30 ফাউবা কন্ত্রিব্যুট তৌবীনবা হায়জরি। অদোমগী ভোইসপু অমুক্তংদা লেপ্তনা রেকোর্দ তৌবসি ৱানা থোকপা য়াই, মরমদুনা ঐখোয়গী ৱেবসাইটতা অদোম্না কয়ারক হন্না চঙদুনা, অদোম্না লেপখিবা মফমদুদগী অমুক হৌবা য়াগদবা লিনর মিজরশিং ঐখোয়না শেম্লে",
+	"Speech Recognition Models": "Speech Recognition Models",
+	"About Us": "ঐখোয়গী মরমদা",
+	"Select the language for contribution": "কন্ত্রিব্যুসনগী লোল খনবীয়ু",
+	"Show All": "Show All",
+	"Say": "হায়বীয়ু",
+	"Contribute Your Voice": "অদোমগী ভোইস কন্ত্রিব্যুট তৌবীয়ু",
+	"Contribute your voice to create an open data repository of Indian languages": "ভারতকী লোলশিংগী ওপন দেটা রিপোজিটরি অমা শেম্নবগীদমক্তা অদোমগী ভোইস কন্ত্রিব্যুট তৌবীয়ু",
+	"Listen": "তাবীয়ু",
+	"Verify What They Say": "মখোয়না হায়রিবশিংদু ভেলিদেট তৌবীয়ু",
+	"Help us by validating the voice samples that others have contributed": "অতোপ্পশিংনা কন্ত্রিব্যুট তৌরকপা ভোইস সেম্পলশিং ভেলিদেট তৌদুনা ঐখোয়বু মতেং পাংবীয়ু",
+	"Vakyansh: A crowdsourcing initiative for Indian languages": "বাক্যাংশ: ভারতকী লোলশিংগী ক্রাউদসোর্সিং ইনিসিএটিব অমা",
+	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "ভারতকী লোলশিংদা স্পিচ রিকগনিসন মোদেলশিং শেমগৎনবগীদমক্তা,দাইভর্সিফাইদ ইন্দিয়ান ভোইসশিংগী ওপন দেটা রিপোজিটরি অমা মথৌ তাই। বাক্যাংশনা অদোম্বু ইন্দিয়ান ভোইসশিংগী দাইভর্স ওপন দেটা রিপোজিটরি অমা শেম্নবগীদমক্তা অদোমগী ভোইস কন্ট্রিব্যুট তৌবীনবা পাউজেল পীজরি।",
+	"Know More": "অহেনবা খঙবীয়ু",
+	"We rely on your contributions": "ঐখোয়না অদোমগী কন্ত্রিব্যুসন্দা থাজবা থম্মী",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "স্পিচ রিকগনিসন মোদেলশিং শেমগৎনবগী মরুওইবা মচাক্তি, ষ্টেটশিং, দাইলেক্টশিং, এক্সেন্টশিং, জেন্দর অমসুং এজ গ্রুপশিং কোন্সিন্দুনা অদোম্না পীরকপা দেটাগী দাইভর্সিটিদা লৈ। লৈবাক অপুনবদা লৈরিবা দাইভর্সিটিগী মেগ্নিটুদনা, ঐখোয়গী লোলশিংগী মপাঙ্গল হাপ্পদা ঐখোয়দা অপুনবগী পাঙ্গল পী",
+	"languages contributed": "কন্ত্রিব্যুট তৌখিবা লোলশিং",
+	"speakers contributed": "কন্ত্রিব্যুট তৌখিবা স্পিকরশিং",
+	"hours recorded": "রেকোর্দ তৌখিবা পুং",
+	"Top Languages": "মকোকথোংবা লোলশিং",
+	"By hours of data contributed": "দেটা কন্ত্রিব্যুট তৌখিবগী পুং মতুংইন্না",
+	"By number of speakers": "স্পিকরশিংগী মশিং মতুংইন্না",
+	"VIEW ALL DETAILS": "অকুপ্পা মরোল পুম্নমক য়েংবীয়ু",
+	"Speaker Details": "স্পিকরগী অকুপ্পা মরোল",
+	"All the fields are optional": "ফিল্ড পুম্নমক ওপসনেলনি",
+	"Not You? Change User": "অদোম নত্তবরা? য়ুজর হোংদোকপীয়ু",
+	"Username": "য়ুজরনেম",
+	"Enter preferred username": "অপাম্বা য়ুজরনেম এন্টর তৌবীয়ু",
+	"Username cannot be more than 12 characters": "য়ুজরনেম কেরেক্টর 12 দগী হেনবা য়াদে",
+	"Please don't use email or mobile number as user name": "য়ুজরনেম ইমেল এদ্রেস নত্ত্রগা মোবাইল নম্বর অমা ওইবা য়াদে",
+	"Mother Tongue": "ইমালোল",
+	"Select Mother Tongue": "ইমালোল খনবীয়ু",
+	"Age Group": "চহি কাংলুপ",
+	"Select Age Group": "চহি কাংলুপ খনবীয়ু",
+	"Gender": "জেন্দর",
+	"Male": "নুপা",
+	"Female": "নুপী",
+	"Others": "অতৈ",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "ঐনা <a href=\"/terms-and-conditions\"> টর্ম অমসুং কন্দিসনশিং </a> পারে অমসুং য়াজরে ",
+	"LET'S GO": "ঐখোয় হৌরসি",
+	"Hide details": "অকুপ্পা মরোলশিং লোৎশিনবীয়ু",
+	"Select Your Preferred Language": "অদোমগী অপাম্বা লোল খনবীয়ু",
+	"Terms & Conditions": "টর্ম অমসুং কন্দিসনশিং",
+	"Privacy Policy": "প্রাইভেসি পোলিসি",
+	"Select the language": "লোল অমা খনবীয়ুe",
+	"All Languages": "লোল পুম্নমক",
+	"Data Last Updated": "দেটা অকোনবা অপদেট তৌখিবা",
+	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"Contribute Now": "Contribute Now",
+	"hours validated": "hours validated",
+	"Progress Chart": "প্রোগ্রেস টাইমলাইন",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Contribution": "জেন্দর কন্ত্রিব্যুসন",
+	"State Wise distribution": "ষ্টেট-ৱাইজ দিষ্ট্ৰিব্যুসন",
+	"Age Group Distribution": "এজ গ্রুপ দিষ্ট্রিব্যুসন",
+	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "ওপন দেটা ষ্ট্রাটেজি অমনা, মখোয়গী লোলগী মতাংদা থৱাই য়াউজবা তোঙান-তোঙানবা লোলশিংগী কম্যুনিটিশিং, ইন্দিভিজুএলশিং অমসুং টেক্নোলোজিষ্টশিংবু স্পিচ রিকগনিসন এপ্লিকেসনশিং দিভলপ তৌবা, অমসুং কম্যুনিটি অদুগী য়াইফনবগীদমক্তা মখোয়বু তোঙান-তোঙানবা দোমেনশিংদা পুন্সিনবা ঙমহনগনি।",
+	"Our multilingual DNA is still a missing piece in digital first strategy": "ঐখোয়গী মল্টিলিঙ্গুএল দি এন এ অসি দিজিটেল ফার্ষ্ট ষ্ট্রাটেজিদা হৌজিকসু য়াওদ্রিবা শরুক অমা ওইরি",
+	"India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.": "ভারত অসি পাক-চাউরবা লোলয়াম ঙাংবা লৈবাক অমা ওইবা মরম্না, ভারতকী মীশিংগী 90% দি মখোয়গী মহৈ-মশিনগী, খুন্নাইগী অমসুং দিজিটেলগী এক্টিভিটিশিং পাংথোকপদা মফমদুগী ওইবা লোলশিংদা তাংজৈ।",
+	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "ইন্টরনেট য়ুজরশিংগী মশিং হেনগৎলকপা অমদি শেল-থুমগী, মহৈ-মশিনগী অমসুং শেনমিৎলোনগী থবক-থৌরমশিংগীদমক্তা দিজিটেল প্লেটফোর্মশিং এক্সেস তৌবগী দিমান্দ অমা লৈরকপগা লোয়ননা, অহানবদা ভারতকী লোলশিং অসিদা মীৎয়েং চঙবা মথৌ তাই।",
+	"Winning back our languages by introducing localization in our ecosystem": "ঐখোয়গী ইকোসিষ্টেমদা লোকেলাইজেসনবু নৌনা মশক তাক্তুনা ঐখোয়গী লোলশিংবু অমুক ফংজবা",
+	"There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.": "ভারতকী লোলশিংদা স্পেসিএলাইজ ওইরবা, হায় এক্যুরেসি বার অমা লৈরবা অমদি দাইভর্স ওইবা ভারতকী লোলশিংগী য়ুজরশিংগী নুংতিগী লোল অমসুং কম্যুনিকেসন্দা হেন্না নকশিনবা স্পিচ রিকগনিসন টেক্নোলোজি অমগী মথৌ তাবা অমা লৈরক্লি।",
+	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "স্পিচ রিকগনিসন হায়বসি স্পিচপু রিএল-টাইম টেক্সতা ওন্থোক্লিবা টেক্নোলোজি অমনি। ভারতকী লোলশিংগী ওইবা অসিগুম্বা মোদেল অমনা, এজুকেসন, হেল্ঠকেয়র অমসুং মিদিয়াগুম্বা তোঙান-তোঙানবা সেক্টরশিংদা, দিজিটেল ফার্ষ্ট মোদেল অমা শাগৎপগী মচাক ওইবগী ওইথোকপা লৈ।",
+	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "দিভলপ তৌনবা প্রোপোজ তৌরিবা টুলশিং, য়ুটিলিটিশিং অমসুং মোদেলশিংনা বাক্যাংশ ক্রাউদ সোর্সিং প্লেটফোর্মগী খুত্থাংদা ওপন সোর্স কন্ত্রিব্যুসনশিংদা তাংজগনি",
+	"Crowd Sourcing & your contribution": "ক্রাউদ সোর্সিং অমসুং অদোমগী কন্ত্রিব্যুসন",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "স্পিচ রিকগনিসন্না, দাইভর্সিফাইদ ইন্দিয়ান ভোইসশিং অমসুং মরি লৈনবা টেক্সট য়াউবা দেটাসেটশিংগী য়াম্না পাক-চাউরবা কল্লেক্সনশিং মথৌ তারিবা \"মেছিন-লর্নিং\" টেক্নোলোজিদা তাংজৈ। বাক্যাংশকী খুত্থাংদা EkStep না ইনিসিএটিব অসিগীদমক্তা শিজিন্নবা য়াবা ভারতকী লোল ঙাংবা ইন্দিয়ান ভোইসকী দাইভর্স ওপন রিপোজিটরি অমা শেম্বা পাম্মী।",
+	"This is where you come in.": "অদোম্না চংলকখিবদু মসিদনি",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "টিম অমা ওইনা, ঐখোয়না অদোম্বু ইনিসিএটিব অসিদা জোইন তৌবীনবা অমসুং অদোমগী ভোইসকী মিনট 30 ফাউবা কন্ত্রিব্যুট তৌবীনবা হায়জরি। অদোমগী ভোইসপু অমুক্তংদা লেপ্তনা রেকোর্দ তৌবসি ৱানা থোকপা য়াই, মরমদুনা ঐখোয়গী ৱেবসাইটতা অদোম্না কয়ারক হন্না চঙদুনা, অদোম্না লেপখিবা মফমদুদগী অমুক হৌবা য়াগদবা লিনর মিজরশিং ঐখোয়না শেম্লে",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "অদোমগী কন্ত্ৰিব্যুসনগী মিনট খুদিংনা অচৌবা অহোংবা পুরক্কনি অমসুং ঐখোয়গী পান্দম ফংহনবদা ঐখোয়বু মতেং পাংগনি",
+	"Select language": "লোল অমা খনবীয়ু",
+	"START RECORDING": "রেকোর্দিং হৌবীয়ু",
+	"ABOUT THE ORGANISATION": "ওর্গানাইজেসনগী মরমদা",
+	"EkStep Foundation": "একষ্টেপ ফাউন্দেসন",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "একষ্টেপ ফাউন্দেসন্না পার্টনরশিংবু পুন্সিল্লি অমসুং মশিং য়াম্লবা খুন্নাইগী চয়েৎনবা প্রোব্লেমশিংবু কোকহন্নবগীদমক্তা ওপন ইনফ্রাষ্ট্রকচর, টুলশিং অমসুং ফ্রেমৱাৰ্কশিং শেম্মী। মসি ঐখোয়না শেম্বা সনবাৰ্দ কৌবা ওপন সোর্স দিজিটেল ইনফ্রাষ্ট্রকচরদা শেলগী ঙাক্লৌ পীদুনা, অমদি সোসাইটেল প্লেটফোর্ম এপ্রোচ কৌবা খনবগী অমসুং পাংথোকপগী মওং অমবু ইন্দুনা ঐখোয়না পাংথোকই।",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "একষ্টেপ অসি রোহিনি অমসুং নন্দন নিলেকানি অমসুং শঙ্কর মারুৱাদানা লিংখৎপা নোট-ফোর-প্রোফিট ওর্গানাইজেসন অমনি",
+	"Terms and Conditions": "টর্ম অমসুং কন্দিসনশিং",
+	"Terms of Use": "Terms of Use",
+	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
+	"Let's get started!": "ঐখোয় হৌরসি!",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "Recording will automatically stop after <span id=\"counter\"></span> seconds",
+	"Audio recording is too small. Please Re-record": "ওদিও রেকোর্দিং অসি পীকমল্লে। চানবীদুনা অমুকহন্না রেকোর্দ তৌবীয়ু",
+	"SKIP": "কান্থোকপীয়ু",
+	"STOP RECORDING": "রেকোর্দিং লেপ্পীয়ু",
+	"RE-RECORD": "অমুকহন্না রেকোর্দ তৌবীয়ু",
+	"NEXT": "মথংদা চৎপীয়ু",
+	"Recording Instructions": "রেকোর্দ তৌবগী ইনষ্ট্রক্সনশিং",
+	"Please test your <b>microphone</b>": "চানবীদুনা অদোমগী মাইক্রোফোন টেষ্ট তৌবীয়ু",
+	"Please test your <b>speakers</b>": "চানবীদুনা অদোমগী স্পিকরশিং টেষ্ট তৌবীয়ু",
+	"Ensure there is <b>no background noise</b>": "অকোয়বদা নিন-খোংবা লৈহনবীগনু",
+	"<b>Read once</b> before recording it": "<b>Read once</b> before recording it",
+	"Get started by clicking on <b>Record</b> button": "রেকোর্দ বটন্দা ক্লিক তৌদুনা হৌবীয়ু",
+	"START": "START",
+	"Error!!!": "অশোয়বা!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "অদোমগী রিক্বেষ্ট প্রোসেস তৌরিঙৈদা খঙহৌদবা অশোয়বা অমা থোকখ্রে। চানবীদুনা ঙাইহাক লৈরগা পাংথোকপীয়ু।",
+	"Close": "ক্লোজ তৌবীয়ু",
+	"Thank you for contributing!": "কন্ত্রিব্যুসনগীদমক্তা অদোম্বু থাগৎচরি!",
+	"Share it with your friends and family": "মসিবু অদোমগী মরুপ-মপাং অমসুং ইমুং-মনুংদা শেয়র তৌবীয়ু",
+	"Contribute More": "কন্ত্রিব্যুট হেন্না তৌবীয়ু",
+	"Instructions": "ইনষ্ট্রক্সনশিং",
+	"Thank you for your enthusiasm to validate the voice samples": "ভোইস সেম্পলশিং ভেলিদেট তৌনবা অদোম্না থৱাই য়াউবীবগীদমক্তা অদোম্বু থাগৎচরি",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "ঐখোয়না হন্দক্তা <span id=\"spn-validation-language\"></span> লোলগী দেটা কন্ত্রিব্যুসনগী খোঙচৎ হৌখ্রে অমদি অদোমগী ভেলিদেসনগীদমক্তা য়াম্না থুনমক ভোইস সেম্পলসিং খোমজিল্লগনি হায়না ঐখোয়না থাজৈ।",
+	"Would you also like to contribute your voice?": "অদোমসু অদোমগী ভোইস কন্ত্রিব্যুট তৌবা পাম্বীব্রা?",
+	"Start Contributing": "কন্ত্রিব্যুট তৌবা হৌবীয়ু",
+	"Thank you for validating!": "ভেলিদেট তৌবীবগীদমক্তা অদোম্বু থাগৎচরি!",
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
+	"Validate More": "ভেলিদেট হেন্না তৌবীয়ু",
+	"Incorrect": "Incorrect",
+	"Play": "Play",
+	"Replay": "Replay",
+	"Pause": "Pause",
+	"Correct": "Correct",
+	"Skip": "কান্থোকপীয়ু",
+	"Validating Instructions": "ভেলিদেট তৌবগী ইনষ্ট্রক্সনশিং",
+	"Ensure the voice is <b>clear and audible</b>": "ভোইস অদু ময়েক শেংবা অমসুং তাবা ঙম্বা ওইহনবীয়ু",
+	"Match the voice to the text <b>accurately</b>": "ভোইস অদু টেক্সটকা চপ চান্নহনবীয়ু",
+	"If you are unsure of the match, skip the particular voice sample": "করিগুম্বা অদোম্না চান্নদ্রে হায়না চিংনরবদি, ভোইস সেম্পল অদু কান্থোকপীয়ু"
 }
