|Sreejith| update 16th march content Kannada

--- a/locales/kn.json
+++ b/locales/kn.json
@@ -8,13 +8,13 @@
 	"Contribute your voice to create an open data repository of Indian languages": "ಭಾರತೀಯ ಭಾಷೆಗಳ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡಿ",
 	"Listen": "ಆಲಿಸಿ",
 	"Validate What They Say": "ಅವರ ಹೇಳಿಕೆಯನ್ನು  ಮೌಲ್ಯೀಕರಿಸಿ",
-	"Help us by validating the voice samples that others have contributed": "ಇತರರು ಕೊಡುಗೆ ನೀಡಿದ ಧ್ವನಿ ಮಾದರಿಗಳನ್ನು ಮೌಲ್ಯೀಕರಿಸುವ ಮೂಲಕ ನಮಗೆ ಸಹಾಯ ಮಾಡಿ",
+	"Help us by validating the voice samples that others have contributed": "ಇತರರು ಕೊಡುಗೆ ನೀಡಿರುವ ಧ್ವನಿ ಮಾದರಿಗಳನ್ನು ಮೌಲ್ಯೀಕರಿಸುವ ಮೂಲಕ ನಮಗೆ ಸಹಾಯ ಮಾಡಿ",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "ವಾಕ್ಯಾಂಶ್: ಭಾರತೀಯ ಭಾಷೆಗಳಿಗೆ ಜನಸಮೂಹ ಮೂಲ ಉಪಕ್ರಮ",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "ಭಾರತೀಯ ಭಾಷೆಗಳಲ್ಲಿ ಭಾಷಣ ಪರಿಗಣನೆಯ ಮಾದರಿಗಳ ಅಭಿವೃದ್ಧಿಗೆ, ವೈವಿಧ್ಯಮಯ ಭಾರತೀಯ ಧ್ವನಿಗಳ ಮುಕ್ತ ಮಾಹಿತಿಗಳ ಭಂಡಾರದ ಅವಶ್ಯಕತೆಯಿದೆ. ಭಾರತೀಯ ಧ್ವನಿಗಳ ವೈವಿಧ್ಯಮಯ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ತಲುಪಲು ಮತ್ತು ಕೊಡುಗೆ ನೀಡಲು ವಾಕ್ಯಾಂಶ್ ನಿಮ್ಮನ್ನು ಆಹ್ವಾನಿಸಿದ್ದಾರೆ.",
 	"Know More": "ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ",
 	"We rely on your contributions": "ನಿಮ್ಮ ಕೊಡುಗೆಗಳನ್ನು ನಾವು ಅವಲಂಬಿಸಿದ್ದೇವೆ",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "ಭಾಷಣದ ಮಾನ್ಯತೆಯ ಮಾದರಿಗಳನ್ನು ನಿರ್ಮಿಸುವ ಕೀಲಿಯು, ರಾಜ್ಯಗಳು, ಉಪಭಾಷೆಗಳು, ಉಚ್ಚಾರಣೆಗಳು, ಲಿಂಗ ಮತ್ತು ವಯಸ್ಸಿನಾದ್ಯಂತ ಕೊಡುಗೆ ನೀಡುವ ಮೂಲಕ ನೀವು ಒದಗಿಸುವ ಮಾಹಿತಿಯ ವೈವಿಧ್ಯತೆಯಲ್ಲಿದೆ. ರಾಷ್ಟ್ರದಾದ್ಯಂತ ಈ ವೈವಿಧ್ಯತೆಯ ಪ್ರಮಾಣವು ನಮ್ಮ ಭಾಷೆಗಳನ್ನು ಸಬಲೀಕರಣಗೊಳಿಸುವಲ್ಲಿ ಸಾಮೂಹಿಕ ಶಕ್ತಿಯನ್ನು ನೀಡುತ್ತದೆ.",
-	"languages contributed": "ಭಾಷೆಗಳ ಕೊಡುಗೆ",
+	"languages contributed": "ಕೊಡುಗೆ ನೀಡಿರುವ ಭಾಷೆಗಳು",
 	"speakers contributed": "ಭಾಷಣಕಾರರು ಕೊಡುಗೆ ನೀಡಿದ್ದಾರೆ",
 	"hours recorded": "ಸಮಯ ದಾಖಲಿಸಲಾಗಿದೆ",
 	"Speaker Details": "ಸ್ಪೀಕರ್ ವಿವರಗಳು",
@@ -28,7 +28,7 @@
 	"Select Age Group": "ವಯೋಮಾನವನ್ನು ಆಯ್ಕೆ ಮಾಡಿ",
 	"Gender": "ಲಿಂಗ",
 	"I have read and agree to the": "ನಾನು ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು ಓದಿದ್ದೇನೆ ಮತ್ತು ಒಪ್ಪುತ್ತೇನೆ",
-	"Terms and Conditions": "Terms and Conditions",
+	"Terms and Conditions": "ನಿಯಮ ಮತ್ತು ಶರತ್ತುಗಳು",
 	"LET'S GO": "ಮುಂದೊಗೋಣ",
 	"Hide details": "ವಿವರಗಳನ್ನು ಮರೆಮಾಡಿ",
 	"Select Your Preferred Language": "ನಿಮ್ಮ ಆದ್ಯತೆಯ ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
@@ -66,7 +66,7 @@
 	"Let's get started!": "ನಾವೀಗ ಆರಂಭಿಸೋಣ!",
 	"SKIP": "ತ್ಯಜಿಸಿ",
 	"STOP RECORDING": "ರೆಕಾರ್ಡಿಂಗ್ ನಿಲ್ಲಿಸಿ",
-	"Audio recording is too small. Please Re-record": "ಆಡಿಯೋ ರೆಕಾರ್ಡಿಂಗ್ ತುಂಬಾ ಸಣ್ಣ ಪ್ರಮಾಣದಾಗಿದೆ. ದಯವಿಟ್ಟು ಮರು-ರೆಕಾರ್ಡ್ ಮಾಡಿ",
+	"Audio recording is too small. Please Re-record": "ಧ್ವನಿ ರೆಕಾರ್ಡಿಂಗ್ ತುಂಬಾ ಚಿಕ್ಕದಾಗಿದೆ. ದಯವಿಟ್ಟು ಮರು-ರೆಕಾರ್ಡ್ ಮಾಡಿ",
 	"RE-RECORD": "ಮರು-ರೆಕಾರ್ಡಿಂಗ್ ಮಾಡಿ",
 	"NEXT": "ಮುಂದೆ",
 	"away from reaching your goal!": "ನಿಮ್ಮ ಗುರಿಯನ್ನು ತಲುಪುವುದರಿಂದ ದೂರದಲ್ಲಿದ್ದಿರಿ!",
@@ -92,15 +92,15 @@
 	"By hours of data contributed": "ಮಾಹಿತಿ ಕೊಡುಗೆಯಿಂದ ಸಮಯದೊಳಗೆ",
 	"By number of speakers": "ಭಾಷಣಕಾರರ ಸಂಖ್ಯೆಯಿಂದ",
 	"VIEW ALL DETAILS": "ಎಲ್ಲಾ ವಿವರಗಳನ್ನು ವೀಕ್ಷಿಸಿ",
-	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "ನಾನು <a href=\"/terms-and-conditions\">ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು</a> ಓದಿದ್ದೇನೆ ಮತ್ತು ಒಪ್ಪುತ್ತೇನೆ",
-	"Show All": "ಎಲ್ಲವನ್ನು ಪ್ರದರ್ಶಿಸು",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "ನಾನು <a href=\"/terms-and-conditions\">ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು</a> ಓದಿದ್ದೇನೆ ಮತ್ತು ಸಮ್ಮತಿಸುತ್ತೇನೆ",
+	"Show All": "ಎಲ್ಲಾ ಪ್ರದರ್ಶಿಸು",
 	"Enter preferred username": "ಆದ್ಯತೆಯ ಬಳಕೆದಾರರ ಹೆಸರನ್ನು ನಮೂದಿಸಿ",
 	"Select the language": "ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
 	"All Languages": "ಎಲ್ಲಾ ಭಾಷೆಗಳು",
 	"Data Last Updated": "ಕೊನೆಯದಾಗಿ ಮಾಹಿತಿ ನವೀಕರಿಸಲಾಗಿದ್ದು",
 	"We do not have any data for <span id=\"languageSelected\"></span> would you like to contribute for it?": "<span id=\"languageSelected\"></span> ನಮ್ಮಲ್ಲಿ ಯಾವುದೇ ಡೇಟಾ ಇಲ್ಲ ನೀವು ಅದಕ್ಕೆ ಕೊಡುಗೆ ನೀಡಲು ಬಯಸುವಿರಾ?",
-	"Contribute Now": "ಈಗ ಕೊಡುಗೆ ನೀಡಿ",
-	"hours validated": "ಮೌಲ್ಯೀಕರಿಸಿದ ಸಮಯ",
+	"Contribute Now": "ಕೊಡುಗೆ ನೀಡಲು ಸಿದ್ದರಾಗಿ",
+	"hours validated": "ಮೌಲ್ಯೀಕರಿಸಲಾದ ಸಮಯ",
 	"Progress Chart": "ಪ್ರೋಗ್ರಾಮ್ ಸಮಯ ಗಡವು",
 	"Monthly": "ಮಾಸಿಕ",
 	"Quarterly": "ತ್ರೈಮಾಸಿಕ",
@@ -119,13 +119,13 @@
 	"total hours contributed": "total hours contributed",
 	"Validate More": "ಮತ್ತಷ್ಟು ಮೌಲ್ಯೀಕರಿಸಿ",
 	"Validating Instructions": "ಮೌಲ್ಯೀಕರಿಸಲಾದ ಸೂಚನೆಗಳು",
-	"We do not have any data for this language, would you like to contribute for it?": "ಈ ಭಾಷೆಗೆ ನಮ್ಮಲ್ಲಿ ಯಾವುದೇ ಮಾಹಿತಿ ಇರುವುದಿಲ್ಲ, ಆದಕಾರಣ ನೀವು ಕೊಡುಗೆ ನೀಡಲು ಇಚ್ಚಿಸುತ್ತಿರಾ?",
+	"We do not have any data for this language, would you like to contribute for it?": "ಈ ಭಾಷೆಗೆ ನಮ್ಮಲ್ಲಿ ಯಾವುದೇ ಡೇಟಾ ಇರುವುದಿಲ್ಲ, ಆದಕಾರಣ ನೀವು ಕೊಡುಗೆ ನೀಡಲು ಬಯಸುವಿರಾ?",
 	"EkStep Foundation": "ಯ್ಯಾಕ್ ಸ್ಟೆಪ್ ಸಂಸ್ಥೆ",
 	"Username cannot be more than 12 characters": "ಬಳಕೆದಾರನ ಹೆಸರು 12 ಅಕ್ಷರಗಳಿಗಿಂತ ಹೆಚ್ಚು ಇರಬಾರದು",
-	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ರೆಕಾರ್ಡಿಂಗ್‌ಗಳನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ನೀವು ನಮಗೆ ಸಹಾಯ ಮಾಡಿದ್ದೀ",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ರೆಕಾರ್ಡಿಂಗ್ ಅನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ನೀವು ನಮಗೆ ಸಹಾಯ ಮಾಡಿದ್ದೀರಿ",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
-	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"If you are unsure of the match, skip the particular voice sample": "ಸೂಕ್ತತೆಯ ಬಗ್ಗೆ ನಿಮಗೆ ಖಚಿತವಿಲ್ಲದಿದ್ದರೆ, ನಿರ್ದಿಷ್ಟ ಧ್ವನಿ ಮಾದರಿಯನ್ನು ಬಿಟ್ಟುಬಿಡಿ",
 	"Oops": "ಅಯ್ಯೋ",
 	"Page Not Found": "ಪುಟ ಗೋಚರಿಸುತ್ತಿಲ್ಲ",
 	"Looks like you have taken a wrong turn here": "ನೀವು ಇಲ್ಲಿ ತಪ್ಪು ತಿರುವು ಮಾಡಿರುವುದು ತೋರುತ್ತಿದೆ",
@@ -133,19 +133,19 @@
 	"to go back to home page": "ಮುಖಪುಟಕ್ಕೆ ಹಿಂತಿರುಗಲು",
 	"hrs recorded in": "%hours ಗಂಟೆಗಳನ್ನು %language ನಲ್ಲಿ ದಾಖಲಿಸಲಾಗಿದೆ",
 	"hrs validated in": "%hours ಗಂಟೆಗಳ %language ನಲ್ಲಿ ಮೌಲ್ಯೀಕರಿಸಲಾಗಿದೆ",
-	"Incorrect": "ತಪ್ಪಾಗಿದೆ",
+	"Incorrect": "ತಪ್ಪು",
 	"Replay": "ಮರು-ಚಾಲನೆ ಮಾಡಿ",
-	"Pause": "ತಡೆ",
-	"Correct": "ಸರಿಯಾದ",
+	"Pause": "ತಾತ್ಕಾಲಿಕ ತಡೆ",
+	"Correct": "ಸರಿ",
 	"Skip": "ತ್ಯಜಿಸಿ",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> ಸೆಕೆಂಡುಗಳ ನಂತರ ರೆಕಾರ್ಡಿಂಗ್ ಸ್ವಯಂಚಾಲಿತವಾಗಿ ನಿಲ್ಲುತ್ತದೆ",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> ಸೆಕೆಂಡುಗಳ ನಂತರ ರೆಕಾರ್ಡಿಂಗ್ ಸ್ವಯಂಚಾಲಿತವಾಗಿ ನಿಷ್ಕ್ರಿಯವಾಗುತ್ತದೆ",
 	"hours": "ಗಂಟೆಗಳು",
 	"minutes": "ನಿಮಿಷಗಳು",
 	"seconds": "ಸೆಕೆಂಡುಗಳನ್ನು",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ಮುಖಪುಟಕ್ಕೆ ಹಿಂತಿರುಗಲು <a class=\"\" href=\"/\">ಇಲ್ಲಿ ಅನ್ನು ಒತ್ತಿರಿ</a>",
-	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "ಭಾಷಣ ಮಾನ್ಯತೆಯು \"ಯಂತ್ರ-ಕಲಿಕೆ\" ತಂತ್ರಜ್ಞಾನವನ್ನು ಅವಲಂಬಿಸಿದೆ, ಇದು ವೈವಿಧ್ಯಮಯ ಭಾರತೀಯ ಧ್ವನಿಗಳು ಮತ್ತು ಅನುಗುಣವಾದ ಪಠ್ಯವನ್ನು ಒಳಗೊಂಡಿರುವ ಡೇಟಾಸೆಟ್‌ಗಳ ದೊಡ್ಡ ಸಂಗ್ರಹಗಳ ಅಗತ್ಯವಿರುತ್ತದೆ. ವಾಕ್ಯಾಂಶ್ ಮೂಲಕ, ಈ ಉಪಕ್ರಮಕ್ಕಾಗಿ ಬಳಸಬಹುದಾದ ಭಾರತೀಯ ಧ್ವನಿ ಮಾತನಾಡುವ ಭಾರತೀಯ ಭಾಷೆಯ ವೈವಿಧ್ಯಮಯ ಮುಕ್ತ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ನಾವು ಬಯಸುತ್ತೇವೆ",
-	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ಒಂದು ತಂಡವಾಗಿ, ನಮ್ಮೊಂದಿಗೆ ಸೇರಲು ಮತ್ತು ಈ ಉಪಕ್ರಮಕ್ಕೆ ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ಕೊಡುಗೆ ನೀಡಲು ನಾವು ನಿಮ್ಮನ್ನು ಆಹ್ವಾನಿಸುತ್ತಿದ್ದೇವೆ. ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ವಿಸ್ತಾರವಾಗಿ ರೆಕಾರ್ಡ್ ಮಾಡುವುದು ಅಗಾಧವಾಗಿರಬಹುದು ಮತ್ತು ಆದ್ದರಿಂದ, ಆದ್ದರಿಂದ, ನಮ್ಮ ವೆಬ್‌ಸೈಟ್‌ನಲ್ಲಿ ನಾವು ಹಗುರವಾದ ಕ್ರಮಗಳನ್ನು ರಚಿಸಿದ್ದೇವೆ, ಏಕೆಂದರೆ ನೀವು ನಮ್ಮನ್ನು ಹಲವು ಬಾರಿ ಭೇಟಿ ಮಾಡುವ ಸಲುವಾಗಿ ಮತ್ತು ನಿಮ್ಮ ಕೆಲಸವನ್ನು ನೀವು ಅಪೂರ್ಣವಾಗಿ ಬಿಟ್ಟು ಹೋದ ಸ್ಥಳದಿಂದ ಪ್ರಾರಂಭಿಸಬಹುದು.",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "ಭಾಷಣ ಮಾನ್ಯತೆಯು \"ಯಂತ್ರ-ಕಲಿಕೆ\" ತಂತ್ರಜ್ಞಾನವನ್ನು ಅವಲಂಬಿಸಿದೆ, ಇದಕ್ಕೆ ವೈವಿಧ್ಯಮಯ ಭಾರತೀಯ ಧ್ವನಿಗಳು ಮತ್ತು ಅನುಗುಣವಾದ ಪಠ್ಯವನ್ನು ಒಳಗೊಂಡಿರುವ ಡೇಟಾಸೆಟ್‌ಗಳ ದೊಡ್ಡ ಸಂಗ್ರಹಗಳ ಅಗತ್ಯವಿರುತ್ತದೆ. ವಾಕ್ಯಾಂಶ್ ಮೂಲಕ, ಭಾರತೀಯ ಧ್ವನಿ ಮಾತನಾಡುವ ಭಾರತೀಯ ಭಾಷೆಯ ವೈವಿಧ್ಯಮಯ ಮುಕ್ತ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ನಾವು ಬಯಸುತ್ತೇವೆ, ಇದನ್ನು ಈ ಉಪಕ್ರಮಕ್ಕೆ ಬಳಸಬಹುದು",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ಒಂದು ತಂಡವಾಗಿ, ನಮ್ಮೊಂದಿಗೆ ಸೇರಲು ಮತ್ತು ಈ ಉಪಕ್ರಮಕ್ಕೆ ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡಲು ನಾವು ನಿಮಗೆ ಆಹ್ವಾನ ನಿಡುತ್ತಿದ್ದೇವೆ, ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ಒಂದು ವಿಸ್ತಾರದಲ್ಲಿ ರೆಕಾರ್ಡ್ ಮಾಡುವುದು ಅಗಾಧವಾಗಿರಬಹುದು ಮತ್ತು ಆದ್ದರಿಂದ, ನಮ್ಮ ವೆಬ್‌ಸೈಟ್‌ನಲ್ಲಿ ನಾವು ಹಗುರವಾದ ಕ್ರಮಗಳನ್ನು ರಚಿಸಿದ್ದೇವೆ, ಏಕೆಂದರೆ ನೀವು ನಮ್ಮನ್ನು ಹಲವು ಬಾರಿ ಸಂದರ್ಶಿಸಬಹುದು ಮತ್ತು ನೀವು ಬಿಟ್ಟುಹೋದ ಸ್ಥಳದಿಂದ ಮತ್ತೆ ಪ್ರಾರಂಭಿಸಬಹುದು.",
 	"Feedback": "Feedback",
-	"<b>Read once</b> before recording it": "ರೆಕಾರ್ಡ್ ಮಾಡುವ ಮೊದಲು ಒಮ್ಮೆ ಅದನ್ನು ಓದಿ",
+	"<b>Read once</b> before recording it": "ರೆಕಾರ್ಡ್ ಮಾಡುವ ಮೊದಲು ಒಮ್ಮೆ ಓದಿ",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ರೆಕಾರ್ಡಿಂಗ್ ಅನ್ನು ಮೌಲ್ಯೀಕರಿಸಿದ್ದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು"
 }
